vendored_parsers/tree-sitter-powershell/test/corpus/enum.txt
===
Enum : Simple enum
===

enum MyEnum
{
    One
}

---

(program
  (statement_list
    (enum_statement
      (simple_name)
      (enum_member
        (simple_name)))))



===
More complex enum
===

enum Enum2
{
    Part1; Two

    Three



    Four
}

---

(program
  (statement_list
    (enum_statement
      (simple_name)
      (enum_member
        (simple_name))
      (enum_member
        (simple_name))
      (enum_member
        (simple_name))
      (enum_member
        (simple_name)))))

===
Enum : Complex enum
===

enum MyEnum
{
    One
    Two = 2; Three = 3
}

---

(program
  (statement_list
    (enum_statement
      (simple_name)
      (enum_member
        (simple_name))
      (enum_member
        (simple_name)
        (integer_literal
          (decimal_integer_literal)))
      (enum_member
        (simple_name)
        (integer_literal
          (decimal_integer_literal))))))